[package]
name = "leptos_wasi"
authors = ["Enzo Nocera" , "Uriah Galang"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos_wasi"
description = "WASI integrations for the Leptos web framework."
version = "0.1.4"
edition = "2024"

[dependencies]
throw_error = { version = "0.3.0" }
hydration_context = { version = "0.3.0" }
futures = "0.3.31"
wasi = "0.14.7+wasi-0.2.4"
leptos = { version = "0.8.9",  features = ["nonce", "ssr"] }
leptos_meta = { version = "0.8.5",  features = ["ssr"] }
leptos_router ={ version = "0.8.7",  features = ["ssr"] }
leptos_macro ={ version = "0.8.8",  features = ["generic"] }
leptos_integration_utils = { version = "0.8.5" }
server_fn = { version = "0.8.7" }
http = "1.3.1"
parking_lot = "0.12.4"
bytes = "1.10.1"
routefinder = "0.5.4"
mime_guess = "2.0.5"
thiserror = "2.0.16"
any_spawner = { version = "0.3.0", features = ["async-executor", "futures-executor"] }

[features]
default = ["generic"]
islands-router = []
spin = ["server_fn/axum-no-default"]
generic = ["server_fn/generic", "server_fn/ssr"]
